--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 * raise NoCommandGivenError when no command was given
 * ability to specify default command (used when no command was given)
 * add order,order!,... methods to mimic optparse
+* optionally capture error messages and provide friendlier output
